fix disabled button flicker

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -134,6 +134,7 @@ body{
 .disabled-button {
     width: 100%;
     max-width: 288px;
+    max-height: 48px;
     padding: 8px;
     box-sizing: border-box;
     border-radius: 12px;
